main.tf
provider "aws" {
    region = var.aws_region
  
}
resource "aws_vpc" "main" {
    cidr_block = "172.10.0.0/16"
    instance_tenancy = "default"

    tags = {
      Name = "main"
    }
}

#Create security group with firewall rules
resource "aws_security_group" "jenkins-sg-2024" {
      name        = var.security_group
      description = "security group for Ec2 instance"
      vpc_id = aws_vpc.main.vpc_id
  
  ingress  {
    
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

 }
   ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
 }
# outbound from jenkis server
  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
tags= {
    Name = var.security_group
  }
}

resource "aws_instance" "myFirstInstance" {
    ami = var.ami_id
    instance_type = var.instance_type
    vpc_security_group_ids = [aws_security_group.jenkins-sg-2024.id]
  
}
